[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/World.tres" type="TileSet" id=1]
[ext_resource path="res://World/CanvasLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/World2.gd" type="Script" id=4]
[ext_resource path="res://Enemies/FinalBoss.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/sprite_montanha_krita.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 362, 204 )

[node name="World2" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 289.233, 129.255 )
scale = Vector2( 0.454377, 0.314881 )
texture = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -2, 1, 0, -1, 1, 1, -65536, 1, 2, -65501, 1, 0, -65500, 1, 1, -65499, 1, 2, 65534, 1, 65536, 65535, 1, 65537, 0, 1, 65538, 35, 1, 65536, 36, 1, 65537, 37, 1, 65538, 131070, 1, 65536, 131071, 1, 65537, 65536, 1, 65538, 65571, 1, 65536, 65572, 1, 65537, 65573, 1, 65538, 196606, 1, 65536, 196607, 1, 65537, 131072, 1, 65538, 131107, 1, 65536, 131108, 1, 65537, 131109, 1, 65538, 262142, 1, 65536, 262143, 1, 65537, 196608, 1, 65538, 196643, 1, 65536, 196644, 1, 65537, 196645, 1, 65538, 327678, 1, 65536, 327679, 1, 65537, 262144, 1, 65538, 262179, 1, 65536, 262180, 1, 65537, 262181, 1, 65538, 393214, 1, 65536, 393215, 1, 65537, 327680, 1, 65538, 327715, 1, 65536, 327716, 1, 65537, 327717, 1, 65538, 458750, 1, 65536, 458751, 1, 65537, 393216, 1, 65538, 393251, 1, 65536, 393252, 1, 65537, 393253, 1, 65538, 524286, 1, 65536, 524287, 1, 65537, 458752, 1, 65538, 458787, 1, 65536, 458788, 1, 65537, 458789, 1, 65538, 589822, 1, 65536, 589823, 1, 65537, 524288, 1, 65538, 524323, 1, 65536, 524324, 1, 65537, 524325, 1, 65538, 655358, 1, 65536, 655359, 1, 65537, 589824, 1, 65538, 589859, 1, 65536, 589860, 1, 65537, 589861, 1, 65538, 720894, 1, 65536, 720895, 1, 65537, 655360, 1, 65538, 655395, 1, 65536, 655396, 1, 65537, 655397, 1, 65538, 786430, 1, 65536, 786431, 1, 65537, 720896, 1, 65538, 720931, 1, 65536, 720932, 1, 65537, 720933, 1, 65538, 851966, 1, 65536, 851967, 1, 65537, 786432, 1, 65538, 786467, 1, 65536, 786468, 1, 65537, 786469, 1, 65538, 917502, 1, 65536, 917503, 1, 65537, 851968, 1, 65538, 852003, 1, 65536, 852004, 1, 65537, 852005, 1, 65538, 983038, 1, 65536, 983039, 1, 65537, 917504, 1, 65538, 917539, 1, 65536, 917540, 1, 65537, 917541, 1, 65538, 1048574, 1, 65536, 1048575, 1, 65537, 983040, 1, 65538, 983075, 1, 65536, 983076, 1, 65537, 983077, 1, 65538, 1114110, 1, 65536, 1114111, 1, 65537, 1048576, 1, 65538, 1048611, 1, 65536, 1048612, 1, 65537, 1048613, 1, 65538, 1179646, 1, 65536, 1179647, 1, 65537, 1114112, 1, 65538, 1114147, 1, 65536, 1114148, 1, 65537, 1114149, 1, 65538, 1245182, 1, 65536, 1245183, 1, 65537, 1179648, 1, 131077, 1179649, 1, 1, 1179650, 1, 1, 1179651, 1, 1, 1179652, 1, 1, 1179653, 1, 1, 1179654, 1, 1, 1179655, 1, 1, 1179656, 1, 1, 1179657, 1, 1, 1179658, 1, 1, 1179659, 1, 1, 1179660, 1, 1, 1179661, 1, 1, 1179662, 1, 1, 1179663, 1, 1, 1179664, 1, 1, 1179665, 1, 1, 1179666, 1, 1, 1179667, 1, 1, 1179668, 1, 1, 1179669, 1, 1, 1179670, 1, 1, 1179671, 1, 1, 1179672, 1, 1, 1179673, 1, 1, 1179674, 1, 1, 1179675, 1, 1, 1179676, 1, 1, 1179677, 1, 1, 1179678, 1, 1, 1179679, 1, 1, 1179680, 1, 1, 1179681, 1, 1, 1179682, 1, 1, 1179683, 1, 131078, 1179684, 1, 65537, 1179685, 1, 65538, 1310718, 1, 65536, 1310719, 1, 65537, 1245184, 1, 65537, 1245185, 1, 65537, 1245186, 1, 65537, 1245187, 1, 65537, 1245188, 1, 65537, 1245189, 1, 65537, 1245190, 1, 65537, 1245191, 1, 65537, 1245192, 1, 65537, 1245193, 1, 65537, 1245194, 1, 65537, 1245195, 1, 65537, 1245196, 1, 65537, 1245197, 1, 65537, 1245198, 1, 65537, 1245199, 1, 65537, 1245200, 1, 65537, 1245201, 1, 65537, 1245202, 1, 65537, 1245203, 1, 65537, 1245204, 1, 65537, 1245205, 1, 65537, 1245206, 1, 65537, 1245207, 1, 65537, 1245208, 1, 65537, 1245209, 1, 65537, 1245210, 1, 65537, 1245211, 1, 65537, 1245212, 1, 65537, 1245213, 1, 65537, 1245214, 1, 65537, 1245215, 1, 65537, 1245216, 1, 65537, 1245217, 1, 65537, 1245218, 1, 65537, 1245219, 1, 65537, 1245220, 1, 65537, 1245221, 1, 65538, 1376254, 1, 65536, 1376255, 1, 65537, 1310720, 1, 65537, 1310721, 1, 65537, 1310722, 1, 65537, 1310723, 1, 65537, 1310724, 1, 65537, 1310725, 1, 65537, 1310726, 1, 65537, 1310727, 1, 65537, 1310728, 1, 65537, 1310729, 1, 65537, 1310730, 1, 65537, 1310731, 1, 65537, 1310732, 1, 65537, 1310733, 1, 65537, 1310734, 1, 65537, 1310735, 1, 65537, 1310736, 1, 65537, 1310737, 1, 65537, 1310738, 1, 65537, 1310739, 1, 65537, 1310740, 1, 65537, 1310741, 1, 65537, 1310742, 1, 65537, 1310743, 1, 65537, 1310744, 1, 65537, 1310745, 1, 65537, 1310746, 1, 65537, 1310747, 1, 65537, 1310748, 1, 65537, 1310749, 1, 65537, 1310750, 1, 65537, 1310751, 1, 65537, 1310752, 1, 65537, 1310753, 1, 65537, 1310754, 1, 65537, 1310755, 1, 65537, 1310756, 1, 65537, 1310757, 1, 65538, 1441790, 1, 65536, 1441791, 1, 65537, 1376256, 1, 65537, 1376257, 1, 65537, 1376258, 1, 65537, 1376259, 1, 65537, 1376260, 1, 65537, 1376261, 1, 65537, 1376262, 1, 65537, 1376263, 1, 65537, 1376264, 1, 65537, 1376265, 1, 65537, 1376266, 1, 65537, 1376267, 1, 65537, 1376268, 1, 65537, 1376269, 1, 65537, 1376270, 1, 65537, 1376271, 1, 65537, 1376272, 1, 65537, 1376273, 1, 65537, 1376274, 1, 65537, 1376275, 1, 65537, 1376276, 1, 65537, 1376277, 1, 65537, 1376278, 1, 65537, 1376279, 1, 65537, 1376280, 1, 65537, 1376281, 1, 65537, 1376282, 1, 65537, 1376283, 1, 65537, 1376284, 1, 65537, 1376285, 1, 65537, 1376286, 1, 65537, 1376287, 1, 65537, 1376288, 1, 65537, 1376289, 1, 65537, 1376290, 1, 65537, 1376291, 1, 65537, 1376292, 1, 65537, 1376293, 1, 65538, 1507326, 1, 65536, 1507327, 1, 65537, 1441792, 1, 65537, 1441793, 1, 65537, 1441794, 1, 65537, 1441795, 1, 65537, 1441796, 1, 65537, 1441797, 1, 65537, 1441798, 1, 65537, 1441799, 1, 65537, 1441800, 1, 65537, 1441801, 1, 65537, 1441802, 1, 65537, 1441803, 1, 65537, 1441804, 1, 65537, 1441805, 1, 65537, 1441806, 1, 65537, 1441807, 1, 65537, 1441808, 1, 65537, 1441809, 1, 65537, 1441810, 1, 65537, 1441811, 1, 65537, 1441812, 1, 65537, 1441813, 1, 65537, 1441814, 1, 65537, 1441815, 1, 65537, 1441816, 1, 65537, 1441817, 1, 65537, 1441818, 1, 65537, 1441819, 1, 65537, 1441820, 1, 65537, 1441821, 1, 65537, 1441822, 1, 65537, 1441823, 1, 65537, 1441824, 1, 65537, 1441825, 1, 65537, 1441826, 1, 65537, 1441827, 1, 65537, 1441828, 1, 65537, 1441829, 1, 65538, 1572862, 1, 65536, 1572863, 1, 65537, 1507328, 1, 65537, 1507329, 1, 65537, 1507330, 1, 65537, 1507331, 1, 65537, 1507332, 1, 65537, 1507333, 1, 65537, 1507334, 1, 65537, 1507335, 1, 65537, 1507336, 1, 65537, 1507337, 1, 65537, 1507338, 1, 65537, 1507339, 1, 65537, 1507340, 1, 65537, 1507341, 1, 65537, 1507342, 1, 65537, 1507343, 1, 65537, 1507344, 1, 65537, 1507345, 1, 65537, 1507346, 1, 65537, 1507347, 1, 65537, 1507348, 1, 65537, 1507349, 1, 65537, 1507350, 1, 65537, 1507351, 1, 65537, 1507352, 1, 65537, 1507353, 1, 65537, 1507354, 1, 65537, 1507355, 1, 65537, 1507356, 1, 65537, 1507357, 1, 65537, 1507358, 1, 65537, 1507359, 1, 65537, 1507360, 1, 65537, 1507361, 1, 65537, 1507362, 1, 65537, 1507363, 1, 65537, 1507364, 1, 65537, 1507365, 1, 65538, 1638398, 1, 65536, 1638399, 1, 65537, 1572864, 1, 65537, 1572865, 1, 65537, 1572866, 1, 65537, 1572867, 1, 65537, 1572868, 1, 65537, 1572869, 1, 65537, 1572870, 1, 65537, 1572871, 1, 65537, 1572872, 1, 65537, 1572873, 1, 65537, 1572874, 1, 65537, 1572875, 1, 65537, 1572876, 1, 65537, 1572877, 1, 65537, 1572878, 1, 65537, 1572879, 1, 65537, 1572880, 1, 65537, 1572881, 1, 65537, 1572882, 1, 65537, 1572883, 1, 65537, 1572884, 1, 65537, 1572885, 1, 65537, 1572886, 1, 65537, 1572887, 1, 65537, 1572888, 1, 65537, 1572889, 1, 65537, 1572890, 1, 65537, 1572891, 1, 65537, 1572892, 1, 65537, 1572893, 1, 65537, 1572894, 1, 65537, 1572895, 1, 65537, 1572896, 1, 65537, 1572897, 1, 65537, 1572898, 1, 65537, 1572899, 1, 65537, 1572900, 1, 65537, 1572901, 1, 65538, 1703934, 1, 65536, 1703935, 1, 65537, 1638400, 1, 65537, 1638401, 1, 65537, 1638402, 1, 65537, 1638403, 1, 65537, 1638404, 1, 65537, 1638405, 1, 65537, 1638406, 1, 65537, 1638407, 1, 65537, 1638408, 1, 65537, 1638409, 1, 65537, 1638410, 1, 65537, 1638411, 1, 65537, 1638412, 1, 65537, 1638413, 1, 65537, 1638414, 1, 65537, 1638415, 1, 65537, 1638416, 1, 65537, 1638417, 1, 65537, 1638418, 1, 65537, 1638419, 1, 65537, 1638420, 1, 65537, 1638421, 1, 65537, 1638422, 1, 65537, 1638423, 1, 65537, 1638424, 1, 65537, 1638425, 1, 65537, 1638426, 1, 65537, 1638427, 1, 65537, 1638428, 1, 65537, 1638429, 1, 65537, 1638430, 1, 65537, 1638431, 1, 65537, 1638432, 1, 65537, 1638433, 1, 65537, 1638434, 1, 65537, 1638435, 1, 65537, 1638436, 1, 65537, 1638437, 1, 65538, 1769470, 1, 65536, 1769471, 1, 65537, 1703936, 1, 65537, 1703937, 1, 65537, 1703938, 1, 65537, 1703939, 1, 65537, 1703940, 1, 65537, 1703941, 1, 65537, 1703942, 1, 65537, 1703943, 1, 65537, 1703944, 1, 65537, 1703945, 1, 65537, 1703946, 1, 65537, 1703947, 1, 65537, 1703948, 1, 65537, 1703949, 1, 65537, 1703950, 1, 65537, 1703951, 1, 65537, 1703952, 1, 65537, 1703953, 1, 65537, 1703954, 1, 65537, 1703955, 1, 65537, 1703956, 1, 65537, 1703957, 1, 65537, 1703958, 1, 65537, 1703959, 1, 65537, 1703960, 1, 65537, 1703961, 1, 65537, 1703962, 1, 65537, 1703963, 1, 65537, 1703964, 1, 65537, 1703965, 1, 65537, 1703966, 1, 65537, 1703967, 1, 65537, 1703968, 1, 65537, 1703969, 1, 65537, 1703970, 1, 65537, 1703971, 1, 65537, 1703972, 1, 65537, 1703973, 1, 65538, 1835006, 1, 65536, 1835007, 1, 65537, 1769472, 1, 65537, 1769473, 1, 65537, 1769474, 1, 65537, 1769475, 1, 65537, 1769476, 1, 65537, 1769477, 1, 65537, 1769478, 1, 65537, 1769479, 1, 65537, 1769480, 1, 65537, 1769481, 1, 65537, 1769482, 1, 65537, 1769483, 1, 65537, 1769484, 1, 65537, 1769485, 1, 65537, 1769486, 1, 65537, 1769487, 1, 65537, 1769488, 1, 65537, 1769489, 1, 65537, 1769490, 1, 65537, 1769491, 1, 65537, 1769492, 1, 65537, 1769493, 1, 65537, 1769494, 1, 65537, 1769495, 1, 65537, 1769496, 1, 65537, 1769497, 1, 65537, 1769498, 1, 65537, 1769499, 1, 65537, 1769500, 1, 65537, 1769501, 1, 65537, 1769502, 1, 65537, 1769503, 1, 65537, 1769504, 1, 65537, 1769505, 1, 65537, 1769506, 1, 65537, 1769507, 1, 65537, 1769508, 1, 65537, 1769509, 1, 65538, 1900542, 1, 65536, 1900543, 1, 65537, 1835008, 1, 65537, 1835009, 1, 65537, 1835010, 1, 65537, 1835011, 1, 65537, 1835012, 1, 65537, 1835013, 1, 65537, 1835014, 1, 65537, 1835015, 1, 65537, 1835016, 1, 65537, 1835017, 1, 65537, 1835018, 1, 65537, 1835019, 1, 65537, 1835020, 1, 65537, 1835021, 1, 65537, 1835022, 1, 65537, 1835023, 1, 65537, 1835024, 1, 65537, 1835025, 1, 65537, 1835026, 1, 65537, 1835027, 1, 65537, 1835028, 1, 65537, 1835029, 1, 65537, 1835030, 1, 65537, 1835031, 1, 65537, 1835032, 1, 65537, 1835033, 1, 65537, 1835034, 1, 65537, 1835035, 1, 65537, 1835036, 1, 65537, 1835037, 1, 65537, 1835038, 1, 65537, 1835039, 1, 65537, 1835040, 1, 65537, 1835041, 1, 65537, 1835042, 1, 65537, 1835043, 1, 65537, 1835044, 1, 65537, 1835045, 1, 65538, 1966078, 1, 131072, 1966079, 1, 131073, 1900544, 1, 131073, 1900545, 1, 131073, 1900546, 1, 131073, 1900547, 1, 131073, 1900548, 1, 131073, 1900549, 1, 131073, 1900550, 1, 131073, 1900551, 1, 131073, 1900552, 1, 131073, 1900553, 1, 131073, 1900554, 1, 131073, 1900555, 1, 131073, 1900556, 1, 131073, 1900557, 1, 131073, 1900558, 1, 131073, 1900559, 1, 131073, 1900560, 1, 131073, 1900561, 1, 131073, 1900562, 1, 131073, 1900563, 1, 131073, 1900564, 1, 131073, 1900565, 1, 131073, 1900566, 1, 131073, 1900567, 1, 131073, 1900568, 1, 131073, 1900569, 1, 131073, 1900570, 1, 131073, 1900571, 1, 131073, 1900572, 1, 131073, 1900573, 1, 131073, 1900574, 1, 131073, 1900575, 1, 131073, 1900576, 1, 131073, 1900577, 1, 131073, 1900578, 1, 131073, 1900579, 1, 131073, 1900580, 1, 131073, 1900581, 1, 131074 )

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="Control5" parent="CanvasLayer" index="1"]
visible = false

[node name="ButtonNext" parent="CanvasLayer/Control3" index="1"]
text = "Voltar ao Menu"

[node name="FinalBoss" parent="." instance=ExtResource( 6 )]
position = Vector2( 275.956, 28.3327 )
collision_layer = 4

[node name="MeleeEnemies" type="Node2D" parent="."]

[node name="Enemy" parent="MeleeEnemies" instance=ExtResource( 7 )]
position = Vector2( 463.791, 274.707 )

[node name="Enemy2" parent="MeleeEnemies" instance=ExtResource( 7 )]
position = Vector2( 281.842, 279.464 )

[node name="Enemy3" parent="MeleeEnemies" instance=ExtResource( 7 )]
position = Vector2( 218.814, 279.464 )

[node name="Enemy4" parent="MeleeEnemies" instance=ExtResource( 7 )]
position = Vector2( 124.867, 278.274 )

[node name="Timer" type="Timer" parent="."]

[node name="EnemyChecker" type="Area2D" parent="."]
visible = false
position = Vector2( 270, 157 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyChecker"]
shape = SubResource( 1 )

[node name="VineChecker" type="Area2D" parent="."]
visible = false
position = Vector2( 270, 157 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="VineChecker"]
shape = SubResource( 1 )

[node name="BossDown" type="Timer" parent="."]
[connection signal="Boss_Position" from="." to="FinalBoss" method="_on_World2_Boss_Position"]
[connection signal="all_enemies_dead" from="." to="FinalBoss" method="_on_World2_all_enemies_dead"]
[connection signal="time_ended" from="." to="FinalBoss" method="_on_World2_time_ended"]
[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control3/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="Boss_Dead" from="FinalBoss" to="." method="_on_FinalBoss_Boss_Dead"]
[connection signal="phase2" from="FinalBoss" to="." method="_on_FinalBoss_phase2"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_exited" from="EnemyChecker" to="." method="_on_EnemyChecker_body_exited"]
[connection signal="area_entered" from="VineChecker" to="." method="_on_VineChecker_area_entered"]
[connection signal="timeout" from="BossDown" to="." method="_on_BossDown_timeout"]

[editable path="CanvasLayer"]
